--- a/fuzzpy/pyproject.toml
+++ b/fuzzpy/pyproject.toml
@@ -21,3 +21,11 @@ dev = ["pytest", "pytest-benchmark", "ruff", "black", "ty"]
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[dependency-groups]
+dev = [
+    "myst-parser>=4.0.1",
+    "sphinx>=8.2.3",
+    "sphinx-autodoc-typehints>=3.2.0",
+    "sphinx-rtd-theme>=3.0.2",
+]
