--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v6
       - name: Install the project
-        run: uv sync --locked --all-extras --dev
+        run: pip install .[dev]
       - name: Build HTML
         run: make -C docs html
       - name: Upload HTML
