--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,9 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v6
       - name: Install the project
-        run: pip install .[dev]
+        run: uv sync --locked --all-extras --dev
+      - name: Install sphinx dependencies
+        run: pip install sphinx sphinx-autodoc-typehints sphinx-rtd-theme myst-parser
       - name: Build HTML
         run: make -C docs html
       - name: Upload HTML
