--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,17 +25,12 @@ jobs:
       - name: Install sphinx dependencies
         run: pip install sphinx sphinx-autodoc-typehints sphinx-rtd-theme myst-parser
       - name: Build HTML
-        run: make -C docs html
-      - name: Upload HTML
-        uses: actions/upload-artifact@v4
-        with:
-          name: docs-html
-          path: docs/build
+        run: sphinx-build docs/source _build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         with:
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/build
+          publish_dir: _build/
           force_orphan: true
