--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "numpy==2.2.*",
     "plotnine>=0.12.4",
+    "scipy>=1.16.0",
 ]
 
 [project.optional-dependencies]
